--- a/WebProxy/WebProxy-Admin/src/themes.scss
+++ b/WebProxy/WebProxy-Admin/src/themes.scss
@@ -52,6 +52,7 @@
 		}
 
 	input[type="text"],
+	input[type="password"],
 	input[type="number"],
 	select
 	{
@@ -61,6 +62,7 @@
 	}
 
 		input[type="text"]:disabled,
+		input[type="password"]:disabled,
 		input[type="number"]:disabled,
 		select:disabled
 		{
@@ -233,6 +235,7 @@
 		}
 
 	input[type="text"],
+	input[type="password"],
 	input[type="number"],
 	select
 	{
@@ -242,6 +245,7 @@
 	}
 
 		input[type="text"]:disabled,
+		input[type="password"]:disabled,
 		input[type="number"]:disabled,
 		select:disabled
 		{
@@ -372,6 +376,7 @@
 		}
 
 	input[type="text"],
+	input[type="password"],
 	input[type="number"],
 	select
 	{
@@ -381,6 +386,7 @@
 	}
 
 		input[type="text"]:disabled,
+		input[type="password"]:disabled,
 		input[type="number"]:disabled,
 		select:disabled
 		{
